[gd_scene load_steps=28 format=2]

[ext_resource path="res://ui/helper.png" type="Texture" id=1]
[ext_resource path="res://SceneTransition.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainViewport.gd" type="Script" id=3]
[ext_resource path="res://fx/parallax/storm1.png" type="Texture" id=4]
[ext_resource path="res://fx/parallax/storm2.png" type="Texture" id=5]
[ext_resource path="res://StormBG.gd" type="Script" id=6]
[ext_resource path="res://fx/parallax/storm3.png" type="Texture" id=7]
[ext_resource path="res://fx/parallax/storm4.png" type="Texture" id=8]
[ext_resource path="res://fx/parallax/storm0.png" type="Texture" id=9]
[ext_resource path="res://fx/parallax/nice1.png" type="Texture" id=10]
[ext_resource path="res://fx/parallax/nice2.png" type="Texture" id=11]
[ext_resource path="res://fx/parallax/nice3.png" type="Texture" id=12]
[ext_resource path="res://fx/parallax/nice0.png" type="Texture" id=13]
[ext_resource path="res://ui/title2.png" type="Texture" id=14]
[ext_resource path="res://ui/playbutton_two_3.png" type="Texture" id=15]
[ext_resource path="res://ui/playbutton_two_2.png" type="Texture" id=16]
[ext_resource path="res://ui/playbutton_two_1.png" type="Texture" id=17]
[ext_resource path="res://lmms/main_music_two.ogg" type="AudioStream" id=18]
[ext_resource path="res://lmms/main_music.ogg" type="AudioStream" id=19]
[ext_resource path="res://sound/lever.wav" type="AudioStream" id=20]
[ext_resource path="res://sfxia/main_transition_maybe.wav" type="AudioStream" id=21]
[ext_resource path="res://sfxia/death_2_mod.wav" type="AudioStream" id=22]
[ext_resource path="res://lmms/menu_music.ogg" type="AudioStream" id=23]
[ext_resource path="res://MenuMusic.gd" type="Script" id=24]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D viewport;

uniform float my_x = 10;
uniform float my_y = 10;
uniform float tex_x = 10;
uniform float tex_y = 10;

void fragment() {
	float tex_ofx = (my_x - tex_x) / 2.0;
	float tex_ofy = (my_y - tex_y) / 2.0;

	float x = UV.x * my_x;
	float y = UV.y * my_y;
	
	x -= tex_ofx;
	y -= tex_ofy;
	
	x /= tex_x;
	y /= tex_y;
	
	vec2 uv = vec2(x, y);
	if(uv.x < 0.0 || uv.y < 0.0 || uv.x > 1.0 || uv.y > 1.0) {
		COLOR = vec4(0.0, 0.0, 0.0, 1.0);
	}
	else {
		COLOR = texture(viewport, uv);
	}
}"

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/my_x = 10.0
shader_param/my_y = 10.0
shader_param/tex_x = 10.0
shader_param/tex_y = 10.0
shader_param/viewport = SubResource( 2 )

[node name="Viewer" type="TextureRect"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu"]
anchor_left = 0.059
anchor_top = 0.033
anchor_right = 0.941
anchor_bottom = 0.967
margin_left = -0.416
margin_top = 0.200001
margin_right = 0.416077
margin_bottom = -0.200012
mouse_filter = 2
texture = ExtResource( 14 )
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Menu"]
anchor_left = 0.371
anchor_top = 0.625
anchor_right = 0.629
anchor_bottom = 0.878
margin_left = 0.0960083
margin_top = 3.05176e-05
margin_right = -0.0960083
margin_bottom = 0.200012
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 16 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource( 23 )
bus = "Music"

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 256, 150 )
handle_input_locally = false
render_target_v_flip = true
render_target_update_mode = 3
script = ExtResource( 3 )

[node name="SceneTransition" parent="Viewport" instance=ExtResource( 2 )]

[node name="Normal" type="AudioStreamPlayer" parent="Viewport/SceneTransition"]
stream = ExtResource( 21 )
volume_db = -4.0

[node name="Death" type="AudioStreamPlayer" parent="Viewport/SceneTransition"]
stream = ExtResource( 22 )
volume_db = -6.0

[node name="CanvasLayer" type="CanvasLayer" parent="Viewport"]
layer = -1
script = ExtResource( 6 )

[node name="Sprite5" type="Sprite" parent="Viewport/CanvasLayer"]
texture = ExtResource( 9 )
centered = false

[node name="Sprite" type="Sprite" parent="Viewport/CanvasLayer"]
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 256, 150 )

[node name="Sprite2" type="Sprite" parent="Viewport/CanvasLayer"]
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 256, 150 )

[node name="Sprite3" type="Sprite" parent="Viewport/CanvasLayer"]
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 256, 150 )

[node name="Sprite4" type="Sprite" parent="Viewport/CanvasLayer"]
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 256, 150 )

[node name="CanvasLayer2" type="CanvasLayer" parent="Viewport"]
layer = -1
script = ExtResource( 6 )
speed = 0.4
flag = true

[node name="Sprite5" type="Sprite" parent="Viewport/CanvasLayer2"]
texture = ExtResource( 13 )
centered = false

[node name="Sprite" type="Sprite" parent="Viewport/CanvasLayer2"]
texture = ExtResource( 10 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 256, 150 )

[node name="Sprite2" type="Sprite" parent="Viewport/CanvasLayer2"]
texture = ExtResource( 11 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 256, 150 )

[node name="Sprite3" type="Sprite" parent="Viewport/CanvasLayer2"]
texture = ExtResource( 12 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 256, 150 )

[node name="Sprite4" type="Sprite" parent="Viewport/CanvasLayer2"]
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 256, 150 )

[node name="PsuedoRoot" type="Node2D" parent="Viewport"]

[node name="Music1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
bus = "Music"

[node name="Music2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
bus = "Music"

[node name="Lever" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -6.0
bus = "FX"

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_left = 60.0
margin_top = 20.0
margin_right = 964.0
margin_bottom = 580.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="Menu/TextureButton" to="Viewport" method="_on_TextureButton_pressed"]
